# esaaedu-backend

./: .dockerignore  .env.example  .gitignore  AI_TASKS_PLAN.md  AUDIO_VIDEO_IMPLEMENTATION_SUMMARY.md  BLOG_REDIS_UPSTASH.md  BLOG_REDIS_UPSTASH_PLAIN.txt  DEBUG_WEBSOCKET.md  DEPLOYMENT.md  DEPLOYMENT_NOTES.md  DIRECT_PROGRESS_APPROACH.md  Dockerfile  ENVIRONMENT_SETUP.md  FRONTEND_FIX_MATERIALS_ERROR.md  FRONTEND_INTEGRATION_PLAN.md  FRONTEND_QUIZ_ASSIGNMENT_AI_EXAMPLE.md  FRONTEND_VIDEO_TRANSCRIBE_EXAMPLE.md  LESSON_COMPLETION_BUG_FIX.md  LESSON_COMPLETION_EFFICIENT_SOLUTION.md  MESSAGING_SYSTEM.md  PARENT_DASHBOARD.md  README.md  REDIS_CHANNELS_DEBUGGING.md  SCHEDULING_WORKFLOW_ANALYSIS.md  SECRET_MANAGER_SETUP.md  SLACK_SETUP.md  WEEKLY_PERFORMANCE_TRENDS.md  api_docs.py  entrypoint.sh  env.example  error_alerts.py  health_checks.py  jitsi_private_key  jitsi_private_key.pub  logging_config.py  pyproject.toml  slack_notifications.py  test_firebase.py  test_websocket.py  update_lesson_types.py
ai/: CHANNEL_LAYERS_EXPLANATION.md  CONSUMERS_PLAN.md  GEMINI_IMAGE_SERVICE.md  SERVICES_WORKFLOW.md  VERTEX_AI_WORKFLOW.md  admin.py  api_errors.py  apps.py  chat_service.py  consumers.py  exceptions.py  gemini_agent.py  gemini_assessment_service.py  gemini_assignment_service.py  gemini_course_detail_service.py  gemini_course_introduction_service.py  gemini_course_lessons_service.py  gemini_grader.py  gemini_ide_error_service.py  gemini_ide_no_output_service.py  gemini_ide_output_service.py  gemini_image_service.py  gemini_quiz_service.py  gemini_service.py  models.py  prompts.py  routing.py  schemas.py  services.py  structured_response.py  tests.py  urls.py  video_transcription_service.py  views.py
authentication/: authentication.py  middleware.py  serializers.py  urls.py  views.py
backend/: admin_calendar_timezone_middleware.py  (+7 more)
(+431 files in other folders)
